--- a/test/spec-runner.html
+++ b/test/spec-runner.html
@@ -3,7 +3,9 @@
   <body></body>
   <script src="../lib/spec_runner.js"></script>
   <script src="../src/core.js"></script>
+  <script src="../dist/core-lang.src.js"></script>
   <script src="specs/module_specs.js"></script>
   <script src="specs/klass_specs.js"></script>
   <script src="specs/observer_specs.js"></script>
+  <script src="specs/lang_specs.js"></script>
 </html>
