--- a/test/spec-runner.html
+++ b/test/spec-runner.html
@@ -2,8 +2,7 @@
   <head><title>Spec Runner</title></head>
   <body></body>
   <script src="../lib/spec_runner.js"></script>
-  <script src="../src/core.js"></script>
-  <script src="../dist/core-lang.src.js"></script>
+  <script src="../dist/core.min.js"></script>
   <script src="specs/module_specs.js"></script>
   <script src="specs/klass_specs.js"></script>
   <script src="specs/observer_specs.js"></script>
