Tweaked to work on Safari

--- a/test/spec-runner.html
+++ b/test/spec-runner.html
@@ -1,8 +1,8 @@
 <html>
-  <head><title>Spec Runner</title></head>
+  <head><title>Core.js - Spec Runner</title></head>
   <body></body>
   <script src="../lib/spec_runner.js"></script>
-  <script src="../dist/core.min.js"></script>
+  <script src="../dist/core.src.js"></script>
   <script src="specs/module_specs.js"></script>
   <script src="specs/klass_specs.js"></script>
   <script src="specs/observer_specs.js"></script>
